// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`블로그 포스트 읽기 - 포스트 상세 페이지 스냅샷 두 번째 포스트 페이지 구조가 스냅샷과 일치한다 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col bg-zinc-50"
  >
    <header
      class="w-full bg-white shadow-sm"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex justify-between items-center h-16"
        >
          <div
            class="flex-shrink-0"
          >
            <h1
              class="text-2xl font-bold text-gray-900"
            >
              My Awesome Site
            </h1>
          </div>
          <button
            class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-md shadow-md"
          >
            가입하기
          </button>
        </div>
      </div>
    </header>
    <main
      class="mx-auto w-full max-w-3xl flex-1 px-6 py-12 bg-white"
    >
      <article>
        <header
          class="mb-8"
        >
          <p
            class="text-sm text-gray-400"
          >
            2026-03-10
          </p>
          <h1
            class="text-3xl font-bold text-gray-900 mt-2"
          >
            Next.js App Router 시작하기
          </h1>
        </header>
        <div
          class="text-gray-700 leading-8"
        >
          <p>
            Next.js 13부터 도입된 App Router는 파일 기반 라우팅 시스템으로, 더욱 직관적이고 강력한 기능을 제공합니다. 이 글에서는 App Router의 기본 개념과 사용법을 알아봅니다.
          </p>
        </div>
        <section
          aria-label="작가 정보"
          class="mt-12 pt-8 border-t border-gray-200"
        >
          <div
            class="flex items-center gap-4"
          >
            <img
              alt="Jane Doe 프로필 사진"
              class="rounded-full object-cover flex-shrink-0"
              height="64"
              src="/images/authors/default-avatar.svg"
              width="64"
            />
            <div>
              <p
                class="text-xs font-medium text-gray-400 uppercase tracking-wide"
              >
                작가
              </p>
              <h3
                class="text-lg font-semibold text-gray-900"
              >
                Jane Doe
              </h3>
              <p
                class="text-sm text-gray-600 mt-1"
              >
                Next.js와 TypeScript를 좋아하는 프론트엔드 개발자입니다.
              </p>
            </div>
          </div>
        </section>
      </article>
    </main>
    <footer
      class="w-full bg-gray-900 text-white"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16"
      >
        <div
          class="flex flex-col items-center gap-8"
        >
          <button
            class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-md shadow-md"
          >
            문의하기
          </button>
          <div
            class="text-center text-gray-400 border-t border-gray-700 pt-8 w-full"
          >
            <p
              class="text-sm"
            >
              © 2026 My Awesome Site. 모든 권리 보유.
            </p>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`블로그 포스트 읽기 - 포스트 상세 페이지 스냅샷 첫 번째 포스트 페이지 구조가 스냅샷과 일치한다 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col bg-zinc-50"
  >
    <header
      class="w-full bg-white shadow-sm"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"
      >
        <div
          class="flex justify-between items-center h-16"
        >
          <div
            class="flex-shrink-0"
          >
            <h1
              class="text-2xl font-bold text-gray-900"
            >
              My Awesome Site
            </h1>
          </div>
          <button
            class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-md shadow-md"
          >
            가입하기
          </button>
        </div>
      </div>
    </header>
    <main
      class="mx-auto w-full max-w-3xl flex-1 px-6 py-12 bg-white"
    >
      <article>
        <header
          class="mb-8"
        >
          <p
            class="text-sm text-gray-400"
          >
            2026-03-11
          </p>
          <h1
            class="text-3xl font-bold text-gray-900 mt-2"
          >
            첫 번째 블로그 게시글
          </h1>
        </header>
        <div
          class="text-gray-700 leading-8"
        >
          <p>
            이것은 첫 번째 블로그 게시글의 본문입니다. 여기에 블로그 포스트의 내용을 작성할 수 있습니다. Next.js와 TypeScript를 사용하여 멋진 블로그를 만들어보세요!
          </p>
        </div>
        <section
          aria-label="작가 정보"
          class="mt-12 pt-8 border-t border-gray-200"
        >
          <div
            class="flex items-center gap-4"
          >
            <img
              alt="Jane Doe 프로필 사진"
              class="rounded-full object-cover flex-shrink-0"
              height="64"
              src="/images/authors/default-avatar.svg"
              width="64"
            />
            <div>
              <p
                class="text-xs font-medium text-gray-400 uppercase tracking-wide"
              >
                작가
              </p>
              <h3
                class="text-lg font-semibold text-gray-900"
              >
                Jane Doe
              </h3>
              <p
                class="text-sm text-gray-600 mt-1"
              >
                Next.js와 TypeScript를 좋아하는 프론트엔드 개발자입니다.
              </p>
            </div>
          </div>
        </section>
      </article>
    </main>
    <footer
      class="w-full bg-gray-900 text-white"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16"
      >
        <div
          class="flex flex-col items-center gap-8"
        >
          <button
            class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-md shadow-md"
          >
            문의하기
          </button>
          <div
            class="text-center text-gray-400 border-t border-gray-700 pt-8 w-full"
          >
            <p
              class="text-sm"
            >
              © 2026 My Awesome Site. 모든 권리 보유.
            </p>
          </div>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
